Fix color block spacing and padding

--- a/styles/styleguide/components/_color-block.scss
+++ b/styles/styleguide/components/_color-block.scss
@@ -4,8 +4,8 @@ $color-block-width: 200px;
 
 .color-block {
   display: inline-block;
-  margin-bottom: spacing(5);
-  margin-right: spacing(5);
+  margin-bottom: spacing(1);
+  margin-right: spacing(1);
   width: $color-block-width;
 }
 
@@ -21,5 +21,5 @@ $color-block-width: 200px;
   display: block;
   font-family: $color-block-label-font;
   line-height: 2;
-  padding: spacing(5);
+  padding: spacing(1);
 }
